--- a/app/views/hybrid_bills/steps/send-a-petition.haml
+++ b/app/views/hybrid_bills/steps/send-a-petition.haml
@@ -1,2 +1,2 @@
 %h1 Send a petition
-=link_to 'Next', hybrid_bill_path(@petition, step: 'writing-your-petition')
+=link_to 'Next', hybrid_bill_path(@business_id, step: 'writing-your-petition')
