--- a/app/views/hybrid_bills/steps/who-are-you-submitting-a-petition-for.haml
+++ b/app/views/hybrid_bills/steps/who-are-you-submitting-a-petition-for.haml
@@ -1,6 +1,6 @@
 Who is submitting page:
 
-= form_tag(hybrid_bill_path(@petition, step: 'details')) do
+= form_tag(hybrid_bill_path(@business_id, step: 'details')) do
   = label_tag 'individual'
   = radio_button_tag 'type', 'individual'
   = label_tag 'group of individuals'
