--- a/app/views/hybrid_bills/steps/document-submission.haml
+++ b/app/views/hybrid_bills/steps/document-submission.haml
@@ -1,9 +1,15 @@
-this is the document submission page
-%h1 New Petition
 %h2 Upload your petition
-%h3 File upload requirements
 %ul
   %li Word Document (doc, docx, rtf, txt, ooxml, odt or PDFformat only)
-  %li 20Mb file size limit
+  %li 10Mb file size limit
   %li No other media types (e.g. pictures or video files)
-/ = form_tag(hybrid_bill_path(@petition, step: 'terms-conditions')) do
+.block--border__bottom
+  = form_tag(hybrid_bill_path(@business_id, step: 'terms-conditions'), multipart: true) do
+    .file--upload
+      %p.file--upload-icon +
+      %h3#file-uploaded-txt
+        Attach your petition template
+        %label
+        = file_field_tag 'file', class: 'file--uploader', id: 'file-upload', title: 'Click here to upload your petition'
+    %p#file-uploaded.file--uploaded No file(s) selected
+    = submit_tag 'next'
