--- a/app/views/hybrid_bills/steps/forms/organisation.haml
+++ b/app/views/hybrid_bills/steps/forms/organisation.haml
@@ -1,7 +1,7 @@
 this is covering organisation section
 %br/
 %h1 Group of individuals details
-= form_tag(hybrid_bill_path(@petition, step: 'document-submission')) do
+= form_tag(hybrid_bill_path(@business_id, step: 'document-submission')) do
   %br/
   = hidden_field_tag 'CommitteeBusinessId', '255'
   = label_tag 'GroupName', 'Business/Organisation name'
@@ -46,5 +46,5 @@ this is covering organisation section
   = label_tag 'Telephone', 'Telephone'
   = text_field_tag 'HybridBillPetitionAgent[Telephone]'
   Who should be contacted about this petition
-  
+
   \#{label_tag 'You'}#{check_box_tag 'HybridBillPetitioner[ShouldBeContacted]'}#{label_tag 'Your representative'}#{check_box_tag 'HybridBillPetitionAgent[ShouldBeContacted]'}#{submit_tag 'next'}
