--- a/app/views/hybrid_bills/steps/writing-your-petition.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition.haml
@@ -1,2 +1,2 @@
 %h1 Writing your petition
-=link_to 'Next', hybrid_bill_path(@petition, step: 'who-are-you-submitting-a-petition-for')
+=link_to 'Next', hybrid_bill_path(@business_id, step: 'who-are-you-submitting-a-petition-for')
