--- a/app/views/constituencies/_constituency.html.haml
+++ b/app/views/constituencies/_constituency.html.haml
@@ -10,31 +10,16 @@
   .section
     .container
       - if Parliament::Utils::Helpers::FlagHelper.dissolution?
-        = render partial: 'shared/dissolution_message'
+        = render 'shared/dissolution_message'
 
-      - elsif @current_incumbency
-        %ol.list--block
-          %li.image__item
-            - if Pugin::Feature::Bandiera.show_list_images?
-              %figure
-                %a{ href: "#{person_path(@current_incumbency.member.graph_id)}", tabindex: "-1" }
-                  - if @current_incumbency.member.image_id(show_placeholder:false)
-                    %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@current_incumbency.member.image_id}.jpg?crop=CU_1:1&width=186&quality=80", alt: "#{@current_incumbency.member.display_name}" }
-                  - else
-                    %img{ src: "#{Pugin::ASSET_LOCATION_URL}/#{Pugin::ASSET_VERSION}/images/placeholder_members_image.png", alt: "placeholder" }
-            .list--details
-              %h2= link_to @current_incumbency.member.display_name, person_path(@current_incumbency.member.graph_id)
-              %p= "#{t('people.show.mp_for')} #{@constituency.name}"
-              - unless @party.nil?
-                %p= @party.name
+      - if Parliament::Utils::Helpers::FlagHelper.election_period?
+        = render 'shared/election_message'
 
-      - elsif Parliament::Utils::Helpers::FlagHelper.election_period?
-        = render partial: 'shared/election_message'
-
-      - else @current_incumbency.nil?
+      - if @current_incumbency.nil?
         .highlight--box.highlight--caution__soft
-          %p
-            = t('no_content.empty_list.no_mp')
+          %p= t('no_content.empty_list.no_mp')
+      - else
+        = render 'member_info'
 
 - else
   .section
@@ -43,14 +28,4 @@
         %p= t('.former_constituency', current_constituencies_link: link_to(t('.current_constituencies_link').capitalize, constituencies_current_path)).html_safe
 
 - if @seat_incumbencies.size > 0
-  .section
-    .container
-      %h2= "#{t('former').capitalize} #{t('mp_plural')}"
-      %ul.list--pipe
-        - @seat_incumbencies.each do |seat_incumbency|
-          - if !seat_incumbency.current?
-            %li
-              .list--details
-                %h3= link_to seat_incumbency.member.display_name, person_path(seat_incumbency.member.graph_id)
-                %p
-                  = seat_incumbency.date_range
+  = render 'former_seat_incumbencies'
