[WEBSITE-2136] Order current roles on people/show page by type
* Amended _current_roles partial to show roles by type (Government Role > Parliamentary Role > Committee Role)
* Create _current_role and _timeline_role partials to DRY up code
* Create RoleHelper module to simplify view
* Create RoleHelper tests, and added additional tests
* Amended peopleController to pass in grouped current roles to _current_roles partial

--- a/app/views/constituencies/show.html.haml
+++ b/app/views/constituencies/show.html.haml
@@ -5,6 +5,6 @@
       %p.lead
         = t('.constituency_in')
         = link_to "#{region.name}", places_show_path(region.gss_code)
-    = render partial: 'shared/map'
+    = render 'shared/map'
 
 = render 'constituencies/constituency'
